# diff-rs

./: Cargo.toml  README.md
diff/: Cargo.toml
diff-derive/: Cargo.toml
diff-derive/src/: lib.rs
diff/src/: impls.rs  lib.rs
