[package]
name = "diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff-derive = {path = "../diff-derive"}
serde = { version = "1", features = [ "derive" ] }

[dev-dependencies]
serde_derive = "1"
serde = "1"
quickcheck = "0.8"
quickcheck_macros = "0.8"
quickcheck_derive = "0.3"
rand = "0.6"